version for Java25.. Allow to launch 10000 agents ! Use VirtualThread
update, new version for Java25.. Allow to launch 10000 agents !
Use VirtualThread
remove corba, RMI.